--- a/index.html
+++ b/index.html
@@ -38,21 +38,23 @@
 
         section p {
             font-size: 1.5em;
+            font-family: "Lora", "Times New Roman", serif;
             color: #333;
+            line-height: 1.6em;
             padding-bottom: 1.5em;
         }
     </style>
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header id="big-header">
         <svg id="header-logo" x="0px" y="0px" viewBox="0 0 30 20">
             <polygon points="0,0 25.981,15 0,30" style="fill:#35c914; stroke: #35c914; stroke-width: 2; stroke-linejoin: round;"></polygon>
-            <g style="stroke: #FFFFFF; stroke-width: 1; stroke-linecap: round;">
+            <g style="stroke: #FFF; stroke-width: 1; stroke-linecap: round;">
                 <line class="st" x1="4.1" y1="9.9" x2="11.6" y2="22.9"></line>
                 <line class="st" x1="2.4" y1="16.9" x2="11.1" y2="11.9"></line>
                 <line class="st" x1="4.8" y1="21" x2="13.4" y2="16"></line>
