Moved application files to /app folder

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>Click the button below to get started. When you do so, it will prompt you to sign into your Google account and select the channel you want to use
         with this tool. All of your information stays in your browser, and does not get sent to me, the creator of this app. The only way this information
         is used is to enable interfacing with YouTube.</p>
-        <button class="big-button" onclick="getGoogleOauthToken()">Get Started</button>
+        <button class="big-button">Get Started</button>
     </section>
 </body>
 
