--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,9 @@
 <head>
     <title>VideoAb</title>
     <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="icon" href="favicon.svg">
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="/styles/shared.css">
+    <link rel="icon" href="/favicon.svg">
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +14,7 @@
 </head>
 
 <body>
-    <header><img id="logo" height="100%" src="logo.svg"></header>
+    <header><img id="logo" height="100%" src="/logo.svg"></header>
     <!--Show for new users or users who have elected to not allow cookies.-->
     <div id="google-auth" class="autocenter">
         <button class="autocenter big-button" onclick="getGoogleOauthToken()">Sign in with Google</button>
@@ -87,8 +88,8 @@
     <!--Scripts are loaded last.-->
     <script src="https://apis.google.com/js/api.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="/youtubePlugin.js"></script>
-    <script src="/videoab.js"></script>
+    <script src="youtubePlugin.js"></script>
+    <script src="videoab.js"></script>
 </body>
 
 </html>
