Changed authentication to be semi-automatic

--- a/app/index.html
+++ b/app/index.html
@@ -10,16 +10,22 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Lora&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Lora&family=Roboto:wght@500&display=swap"
+        rel="stylesheet">
 </head>
 
-<body>
+<body onload="getGoogleOauthToken()">
     <header><img id="logo" height="100%" src="/logo.svg"></header>
-    <!--Show for new users or users who have elected to not allow cookies.-->
-    <div id="google-auth" class="autocenter">
-        <button class="autocenter big-button" onclick="getGoogleOauthToken()">Sign in with Google</button>
-        
-        <div id="google-signin-button" ></div>
+    <!--Show before authentication-->
+    <div id="google-auth" class="autocenter app-panel">
+        <p>The app will load once you complete the Google Authentication prompt that popped up. If there was no pop-up
+            or you closed the pop-up, you can click the button below to open another one.</p>
+
+        <p>If you don't want to grant the app access to manage your YouTube channel, that's fine! It just... it needs
+            that in order to change thumbnails, so it won't work if you choose not to grant that access. Still your
+            choice, just don't use the app if you don't trust it. Doesn't matter to me.</p>
+
+        <button class="big-button" onclick="getGoogleOauthToken()">Get Started</button>
     </div>
 
     <!--Once the user is logged in, show the actual app.-->
