Added progress bar styling

--- a/app/index.html
+++ b/app/index.html
@@ -91,9 +91,12 @@
             </div>
         </div>
         <div id="progress-bar-marquee">
-            <div id="progress-bar-container">
-                <h3>Test Progress</h3>
-                <div id="progress-bar"></div>
+            <div id="progress-bar-container" class="app-panel autocenter">
+                <h2>Test Progress</h2>
+                <p id="progress-text"></p>
+                <div id="progress-bar-back" class="autocenter">
+                    <div id="progress-bar"></div>
+                </div>
             </div>
         </div>
     </div>
